added CSRF attack protection

--- a/MongoDB/Mongoose/Shop/views/admin/add-product.ejs
+++ b/MongoDB/Mongoose/Shop/views/admin/add-product.ejs
@@ -19,6 +19,7 @@
             <textarea id="desc" name="desc"></textarea>
           </div>
         </div>
+        <input type="hidden" name="_csrf" value="<%= csrfToken %>">
         <button class="btn" type="submit">Add Product</button>
       </form>
     </main>
