--- a/MongoDB/Mongoose/Shop/views/auth/login.ejs
+++ b/MongoDB/Mongoose/Shop/views/auth/login.ejs
@@ -11,6 +11,7 @@
                 <input type="password" id="pass" name="password">
             </div>
         </div>
+        <input type="hidden" name="_csrf" value="<%= csrfToken %>">
         <button class="btn login" type="submit">Login</button>
       </form>
     </main>
