--- a/MongoDB/Mongoose/Shop/views/admin/edit-product.ejs
+++ b/MongoDB/Mongoose/Shop/views/admin/edit-product.ejs
@@ -26,6 +26,7 @@
         </div>
         <% if(isEditing){ %>
             <input type="hidden" value="<%= product._id %>" name="productId">
+            <input type="hidden" name="_csrf" value="<%= csrfToken %>">
         <% } %>
         <button class="btn" type="submit">
             <% if(isEditing) { %>
