--- a/MongoDB/Mongoose/Shop/views/admin/products.ejs
+++ b/MongoDB/Mongoose/Shop/views/admin/products.ejs
@@ -25,6 +25,7 @@
               <button class="btn" type="submit">Edit</button>
             </form>
             <form action="/admin/delete-product" method="POST">
+              <input type="hidden" name="_csrf" value="<%= csrfToken %>">
               <input type="hidden" value="<%= product._id %>" name="productId">
               <button class="btn delete" type="submit">Delete</button>
             </form>
