--- a/MongoDB/Mongoose/Shop/views/shop/product-list.ejs
+++ b/MongoDB/Mongoose/Shop/views/shop/product-list.ejs
@@ -23,10 +23,13 @@
               <form action="/products/<%= product._id %>" method="GET">
                 <button class="btn" type="submit">Details</button>
               </form>
-              <form action="/cart" method="POST">
-                <button class="btn" type="submit">Add to Cart</button>
-                <input type="hidden" name="productId" value="<%= product._id %>">
-              </form>
+              <% if (isAuthenticated) { %>
+                <form action="/cart" method="POST">
+                  <button class="btn" type="submit">Add to Cart</button>
+                  <input type="hidden" name="productId" value="<%= product._id %>">
+                  <input type="hidden" name="_csrf" value="<%= csrfToken %>">
+                </form>
+              <% } %>
             </div>
           </div>
         </article>
