--- a/MongoDB/Mongoose/Shop/views/shop/index.ejs
+++ b/MongoDB/Mongoose/Shop/views/shop/index.ejs
@@ -19,10 +19,13 @@
             <p class="product-desc"><%= product.desc %></p>
           </div>
           <div class="card-action">
-            <form action="/cart" method="POST">
-              <button class="btn" type="submit">Add to Cart</button>
-              <input type="hidden" name="productId" value="<%= product._id %>">
-          </form>
+            <% if (isAuthenticated){ %>
+              <form action="/cart" method="POST">
+                <button class="btn" type="submit">Add to Cart</button>
+                <input type="hidden" name="productId" value="<%= product._id %>">
+                <input type="hidden" name="_csrf" value="<%= csrfToken %>">
+              </form>
+            <% } %>
           </div>
         </article>
         <% } %>
