--- a/MongoDB/Mongoose/Shop/views/shop/product-detail.ejs
+++ b/MongoDB/Mongoose/Shop/views/shop/product-detail.ejs
@@ -9,10 +9,13 @@
             <h1><%= product.name  %></h1>
             <h2><%= product.price  %>/-</h2>
             <p><%= product.desc  %></p>
-            <form action="/cart" method="POST">
-                <button class="btn" type="submit">Add to Cart</button>
-                <input type="hidden" name="productId" value="<%= product._id %>">
-            </form>
+            <% if (isAuthenticated){ %>
+                <form action="/cart" method="POST">
+                  <button class="btn" type="submit">Add to Cart</button>
+                  <input type="hidden" name="productId" value="<%= product._id %>">
+                  <input type="hidden" name="_csrf" value="<%= csrfToken %>">
+                </form>
+            <% } %>
         </div>
     </main>
 </body>
